--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -215,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,9 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If 5 machines take 5 minutes to make 5 widgets, how long would 100 machines take to make 100 widgets?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -245,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +290,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the problem step-by-step:\n",
+      "\n",
+      "**Given:**  \n",
+      "- 5 machines take 5 minutes to make 5 widgets.\n",
+      "\n",
+      "**Step 1: Find the rate of one machine.**  \n",
+      "- Since 5 machines make 5 widgets in 5 minutes, the total production rate is:  \n",
+      "  \\[\n",
+      "  \\frac{5 \\text{ widgets}}{5 \\text{ minutes}} = 1 \\text{ widget per minute (by 5 machines)}\n",
+      "  \\]\n",
+      "\n",
+      "- Therefore, the rate of one machine is:  \n",
+      "  \\[\n",
+      "  \\frac{1 \\text{ widget per minute}}{5} = \\frac{1}{5} \\text{ widget per minute per machine}\n",
+      "  \\]\n",
+      "\n",
+      "**Step 2: Find how long 100 machines take to make 100 widgets.**  \n",
+      "- Total rate with 100 machines:  \n",
+      "  \\[\n",
+      "  100 \\times \\frac{1}{5} = 20 \\text{ widgets per minute}\n",
+      "  \\]\n",
+      "\n",
+      "- Time needed to make 100 widgets:  \n",
+      "  \\[\n",
+      "  \\frac{100 \\text{ widgets}}{20 \\text{ widgets per minute}} = 5 \\text{ minutes}\n",
+      "  \\]\n",
+      "\n",
+      "**Answer:**  \n",
+      "100 machines will take **5 minutes** to make 100 widgets.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -272,9 +343,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the problem step-by-step:\n",
+       "\n",
+       "**Given:**  \n",
+       "- 5 machines take 5 minutes to make 5 widgets.\n",
+       "\n",
+       "**Step 1: Find the rate of one machine.**  \n",
+       "- Since 5 machines make 5 widgets in 5 minutes, the total production rate is:  \n",
+       "  \\[\n",
+       "  \\frac{5 \\text{ widgets}}{5 \\text{ minutes}} = 1 \\text{ widget per minute (by 5 machines)}\n",
+       "  \\]\n",
+       "\n",
+       "- Therefore, the rate of one machine is:  \n",
+       "  \\[\n",
+       "  \\frac{1 \\text{ widget per minute}}{5} = \\frac{1}{5} \\text{ widget per minute per machine}\n",
+       "  \\]\n",
+       "\n",
+       "**Step 2: Find how long 100 machines take to make 100 widgets.**  \n",
+       "- Total rate with 100 machines:  \n",
+       "  \\[\n",
+       "  100 \\times \\frac{1}{5} = 20 \\text{ widgets per minute}\n",
+       "  \\]\n",
+       "\n",
+       "- Time needed to make 100 widgets:  \n",
+       "  \\[\n",
+       "  \\frac{100 \\text{ widgets}}{20 \\text{ widgets per minute}} = 5 \\text{ minutes}\n",
+       "  \\]\n",
+       "\n",
+       "**Answer:**  \n",
+       "100 machines will take **5 minutes** to make 100 widgets."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -319,21 +431,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Business Idea:** Personalized financial planning and investment advisory using Agentic AI."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Pikup a business area that might be interesting to explore for an Agentic AI opportunity. Respond only with the business idea.\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = response.choices[0].message.content\n",
+    "display(Markdown(f\"**Business Idea:** {business_idea}\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And repeat! In the next message, include the business idea within the message\n",
     "\n",
-    "# And repeat! In the next message, include the business idea within the message"
+    "messages = [{\"role\": \"user\", \"content\": f\"Here is a business idea: {business_idea}. Please present the pain point that might be ripe for an Agentic AI solution.\"}]\n",
+    "\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages)"
    ]
   },
   {
@@ -344,7 +489,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.7)",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
