--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -468,9 +468,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Pain Point:** Certainly! Here’s a clear articulation of the pain point that a Personalized Financial Planning and Investment Advisory service using Agentic AI could address:\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Pain Point: Complexity and Inaccessibility of Personalized Financial Advice\n",
+       "\n",
+       "Many individuals find financial planning and investment advisory services complex, time-consuming, and often prohibitively expensive. Traditional financial advisors typically offer generic advice, lack real-time responsiveness, and struggle to keep up with rapidly changing market conditions and individual client circumstances. This leaves many people—especially younger or less wealthy investors—without tailored, dynamic financial guidance that adapts continuously to their goals, risk tolerance, and life changes.\n",
+       "\n",
+       "Key aspects of this pain point include:\n",
+       "\n",
+       "- **Information Overload and Complexity:** The financial markets are vast and complicated. Many individuals lack the expertise or time to analyze relevant data, tax implications, risk factors, and investment opportunities comprehensively.\n",
+       "- **Generic and Static Advice:** Conventional advisory services often provide one-size-fits-all strategies or infrequent updates that don’t reflect real-time market shifts or personal changes such as income fluctuations, job changes, or family growth.\n",
+       "- **Cost and Accessibility Barriers:** Professional financial advice can be costly and therefore inaccessible to many middle-income individuals who would benefit from personalized planning.\n",
+       "- **Emotional Bias and Inconsistent Decision-Making:** Human advisors and clients alike can be subject to cognitive biases, emotional reactions, and inconsistent strategies that negatively impact investment outcomes.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### Why Agentic AI Is Well-Suited to Solve This Pain Point:\n",
+       "\n",
+       "Agentic AI, with its autonomous reasoning, continuous learning, and proactive decision-making capabilities, can deliver:\n",
+       "\n",
+       "- **Dynamic, Real-Time Personalization:** Continuously analyze a user’s financial data, market trends, and life events to adjust investment strategies instantly.\n",
+       "- **Scalable, Cost-Effective Advisory:** Provide personalized advice at a fraction of the cost of human advisors, democratizing access to high-quality financial planning.\n",
+       "- **Proactive Management and Optimization:** Anticipate risks, tax implications, and opportunities before they arise, acting autonomously to optimize portfolios.\n",
+       "- **Objective, Data-Driven Recommendations:** Eliminate emotional biases by relying on comprehensive data and sophisticated predictive models.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "In summary, the pain point ripe for an Agentic AI solution lies in the need for personalized, accessible, and adaptive financial advice that keeps pace with individual circumstances and market dynamics—something traditional advisory services struggle to provide efficiently and affordably. Agentic AI offers the potential to transform financial planning into a seamless, proactive, and truly personalized experience."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# And repeat! In the next message, include the business idea within the message\n",
     "\n",
@@ -478,13 +519,138 @@
     "\n",
     "response = openai.chat.completions.create(\n",
     "    model=\"gpt-4.1-mini\",\n",
-    "    messages=messages)"
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "pain_point = response.choices[0].message.content\n",
+    "display(Markdown(f\"**Pain Point:** {pain_point}\"))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**AI Solution:** Certainly! Below is a suggested high-level implementation plan for an **Agentic AI-driven Personalized Financial Planning and Investment Advisory** solution. The plan covers core technical components, data sources, system architecture, and workflow to address the identified pain points effectively.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "## Implementation Plan for Agentic AI Personalized Financial Planning & Advisory\n",
+       "\n",
+       "### 1. **Core Components**\n",
+       "\n",
+       "#### a. Data Aggregation & Integration Layer\n",
+       "- **User Financial Profile:** Income, expenses, assets, liabilities, savings, investment accounts, tax status, risk tolerance questionnaires, goals, and preferences.\n",
+       "- **Market Data Feeds:** Real-time stock prices, bond & commodity markets, ETFs, mutual funds, economic indicators.\n",
+       "- **External Data:** News sentiment analysis, regulatory changes, geopolitical events, social trends, tax law updates.\n",
+       "- **Behavioral & Psychometric Data:** User spending habits, emotional risk profiles, decision history.\n",
+       "\n",
+       "#### b. Agentic AI Engine\n",
+       "- **Autonomous Reasoning Module:** Infers personalized strategies by reasoning over user goals, constraints, and market conditions.\n",
+       "- **Continuous Learning & Adaptation Module:** Uses reinforcement learning and online learning to adapt models as new data/events occur.\n",
+       "- **Proactive Decision-Making Module:** Anticipates portfolio risks/opportunities, performs real-time rebalancing, tax-loss harvesting, and diversification adjustments.\n",
+       "- **Simulation & Scenario Testing Module:** Runs Monte Carlo simulations, stress tests, and “what-if” analyses to optimize plans under uncertainty.\n",
+       "\n",
+       "#### c. Explainability & Transparency Layer\n",
+       "- Intuitive dashboards explaining AI suggestions, risk metrics, expected returns, and rationale behind decisions.\n",
+       "- Interactive Q&A or chatbot for clarifying AI recommendations.\n",
+       "\n",
+       "#### d. Compliance & Security Module\n",
+       "- Data encryption, GDPR/CCPA compliance.\n",
+       "- Advisory compliance with financial regulations (SEC, FINRA, MiFID II).\n",
+       "- Audit trails for AI decisions.\n",
+       "\n",
+       "#### e. User Interface (UI/UX)\n",
+       "- Mobile and Web apps with personalized financial planning dashboards.\n",
+       "- Alerts and notifications for actionable insights and required user inputs.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 2. **High-Level Workflow**\n",
+       "\n",
+       "1. **User Onboarding & Profiling**\n",
+       "   - Collect detailed financial data and goals through questionnaires and secure data import (bank, brokerage APIs).\n",
+       "   - Assess risk tolerance using adaptive psychometric tests.\n",
+       "\n",
+       "2. **Initial Assessment & Plan Generation**\n",
+       "   - Agentic AI synthesizes user profile and current market data.\n",
+       "   - Generates a personalized financial plan, including asset allocation, savings targets, investment recommendations, and tax strategies.\n",
+       "\n",
+       "3. **Continuous Monitoring & Adaptation**\n",
+       "   - Real-time monitoring of markets and user financial events (salary changes, expenses, family events).\n",
+       "   - Proactive portfolio adjustments recommended or executed autonomously (per user’s authorization).\n",
+       "\n",
+       "4. **User Engagement & Advisory Feedback**\n",
+       "   - Deliver personalized insights, educational content, and alerts via UI.\n",
+       "   - Provide explainable reasoning to build trust and understanding.\n",
+       "\n",
+       "5. **Scenario Analysis & Reforecasting**\n",
+       "   - Allow users to simulate scenarios such as changing risk appetite, retirement timelines, or major purchases.\n",
+       "   - AI re-optimizes plans dynamically.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 3. **Technology Stack Suggestions**\n",
+       "\n",
+       "- **Data Storage:** Cloud data lakes (AWS S3, Azure Blob), secure relational databases (PostgreSQL).\n",
+       "- **APIs:** Financial data APIs (Alpha Vantage, IEX Cloud), banking APIs (Plaid), news APIs (Google News, Bloomberg).\n",
+       "- **AI/ML Frameworks:** TensorFlow, PyTorch for modeling; Reinforcement learning libraries (RLlib).\n",
+       "- **Agentic AI:** Custom frameworks implementing multi-agent systems or autonomous decision agents; could incorporate symbolic reasoning (e.g., using Prolog or neuro-symbolic AI).\n",
+       "- **Backend:** Python/Node.js for AI services, microservice architecture.\n",
+       "- **Frontend:** React/Flutter for cross-platform apps.\n",
+       "- **Security:** OAuth 2.0 for authentication, end-to-end encryption.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 4. **Potential Challenges & Mitigations**\n",
+       "\n",
+       "- **Data Privacy:** Use differential privacy and strict consent management.\n",
+       "- **Regulatory Compliance:** Regular audits, involve legal experts from design phase.\n",
+       "- **Trust Building:** Gradual autonomous control increase, human-in-the-loop options.\n",
+       "- **Model Bias & Robustness:** Continuously validate and test AI models against diverse user groups and market conditions.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 5. **Future Enhancements**\n",
+       "\n",
+       "- Incorporate **Natural Language Interfaces** for conversational financial advice.\n",
+       "- Expand services to **tax filing, retirement planning**, and **estate management** autonomously.\n",
+       "- Enable **collaborative multi-agent systems**, allowing specialized agents (tax, investment, insurance) to negotiate and optimize holistic plans.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "In summary, the implementation would revolve around building a tightly integrated system combining rich user and market data, advanced autonomous AI reasoning and learning, explainability to maintain user trust, and secure accessible interfaces. This would democratize tailored financial advice, making it dynamic, affordable, and deeply personalized—fulfilling the core pain points with Agentic AI capabilities."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# And repeat! In the next message, include the business idea within the message\n",
+    "\n",
+    "messages = [{\"role\": \"user\", \"content\": f\"Ok, for the given business idea - {business_idea} and its painpoint {pain_point}, please suggest the implementation for the Agentic AI solution.\"}]\n",
+    "\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "\n",
+    "ai_solution = response.choices[0].message.content\n",
+    "\n",
+    "display(Markdown(f\"**AI Solution:** {ai_solution}\"))\n"
+   ]
   }
  ],
  "metadata": {
